feat: add test system

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,13 @@
             "request": "launch",
             "program": "${cwd}/src/main.py",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Python Debugger: Test",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${cwd}/src/tests/test_all.py",
+            "console": "integratedTerminal"
         }
     ]
 }
