--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,20 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
+    "preLaunchTask": null,
     "configurations": [
         {
             "name": "Python Debugger: Main",
             "type": "debugpy",
             "request": "launch",
             "program": "${cwd}/src/main.py",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python Debugger: Test",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${cwd}/src/tests/test_all.py",
             "console": "integratedTerminal"
         }
     ]
